--- a/plugins/catalog-backend/package.json
+++ b/plugins/catalog-backend/package.json
@@ -64,6 +64,7 @@
   "devDependencies": {
     "@backstage/backend-test-utils": "^0.1.10",
     "@backstage/cli": "^0.10.0",
+    "@backstage/plugin-search-backend-node": "0.4.2",
     "@backstage/test-utils": "^0.1.23",
     "@types/core-js": "^2.5.4",
     "@types/git-url-parse": "^9.0.0",
